--- a/LOLIS2D/LOLIS2D.vcxproj
+++ b/LOLIS2D/LOLIS2D.vcxproj
@@ -49,6 +49,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src/GameManager.cpp" />
+    <ClInclude Include="inc/GameManager.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
