--- a/LOLIS2D/LOLIS2D.vcxproj
+++ b/LOLIS2D/LOLIS2D.vcxproj
@@ -50,7 +50,13 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src/GameManager.cpp" />
+    <ClCompile Include="src/Scene.cpp" />
+    <ClCompile Include="src/GameObject.cpp" />
+    <ClCompile Include="src/Transform.cpp" />
     <ClInclude Include="inc/GameManager.hpp" />
+    <ClInclude Include="inc/Scene.hpp" />
+    <ClInclude Include="inc/GameObject.hpp" />
+    <ClInclude Include="inc/Transform.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
