--- a/LOLIS2D/LOLIS2D.vcxproj
+++ b/LOLIS2D/LOLIS2D.vcxproj
@@ -39,6 +39,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>.\inc;..\SFML\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalOptions>/std:c++17 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -53,10 +54,13 @@
     <ClCompile Include="src/Scene.cpp" />
     <ClCompile Include="src/GameObject.cpp" />
     <ClCompile Include="src/Transform.cpp" />
+    <ClCompile Include="src/ColorRenderer.cpp" />
     <ClInclude Include="inc/GameManager.hpp" />
     <ClInclude Include="inc/Scene.hpp" />
     <ClInclude Include="inc/GameObject.hpp" />
     <ClInclude Include="inc/Transform.hpp" />
+    <ClInclude Include="inc/IRenderer.hpp" />
+    <ClInclude Include="inc/ColorRenderer.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
