--- a/LOLIS2D/LOLIS2D.vcxproj
+++ b/LOLIS2D/LOLIS2D.vcxproj
@@ -54,12 +54,14 @@
     <ClCompile Include="src/GameObject.cpp" />
     <ClCompile Include="src/Transform.cpp" />
     <ClCompile Include="src/ColorRenderer.cpp" />
+    <ClCompile Include="src/AScript.cpp" />
     <ClInclude Include="inc/GameManager.hpp" />
     <ClInclude Include="inc/Scene.hpp" />
     <ClInclude Include="inc/GameObject.hpp" />
     <ClInclude Include="inc/Transform.hpp" />
     <ClInclude Include="inc/IRenderer.hpp" />
     <ClInclude Include="inc/ColorRenderer.hpp" />
+    <ClInclude Include="inc/AScript.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
