--- a/LOLIS2D/LOLIS2D.vcxproj
+++ b/LOLIS2D/LOLIS2D.vcxproj
@@ -55,6 +55,7 @@
     <ClCompile Include="src/Transform.cpp" />
     <ClCompile Include="src/ColorRenderer.cpp" />
     <ClCompile Include="src/AScript.cpp" />
+    <ClCompile Include="src/Time.cpp" />
     <ClInclude Include="inc/GameManager.hpp" />
     <ClInclude Include="inc/Scene.hpp" />
     <ClInclude Include="inc/GameObject.hpp" />
@@ -62,6 +63,7 @@
     <ClInclude Include="inc/IRenderer.hpp" />
     <ClInclude Include="inc/ColorRenderer.hpp" />
     <ClInclude Include="inc/AScript.hpp" />
+    <ClInclude Include="inc/Time.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
