Add input management

--- a/LOLIS2D/LOLIS2D.vcxproj
+++ b/LOLIS2D/LOLIS2D.vcxproj
@@ -56,6 +56,7 @@
     <ClCompile Include="src/ColorRenderer.cpp" />
     <ClCompile Include="src/AScript.cpp" />
     <ClCompile Include="src/Time.cpp" />
+    <ClCompile Include="src/Input.cpp" />
     <ClInclude Include="inc/GameManager.hpp" />
     <ClInclude Include="inc/Scene.hpp" />
     <ClInclude Include="inc/GameObject.hpp" />
@@ -64,6 +65,7 @@
     <ClInclude Include="inc/ColorRenderer.hpp" />
     <ClInclude Include="inc/AScript.hpp" />
     <ClInclude Include="inc/Time.hpp" />
+    <ClInclude Include="inc/Input.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
