--- a/LOLIS2D/LOLIS2D.vcxproj
+++ b/LOLIS2D/LOLIS2D.vcxproj
@@ -58,6 +58,7 @@
     <ClCompile Include="src/Time.cpp" />
     <ClCompile Include="src/Input.cpp" />
     <ClCompile Include="src/DynamicGameObject.cpp" />
+    <ClInclude Include="inc/ICollider.hpp" />
     <ClInclude Include="inc/GameManager.hpp" />
     <ClInclude Include="inc/Scene.hpp" />
     <ClInclude Include="inc/GameObject.hpp" />
